# mimiron

./: .gitignore  Cargo.toml  License.md  README.md  error.txt  localization_data_sample.json  shuttle_prebuild.sh
.github/workflows/: main.yml
.zed/: settings.json
mimiron/: Cargo.toml
mimiron/src/: authorization.rs  bg.rs  card.rs  card_details.rs  deck.rs  deck_image.rs  hearth_sim.rs  helpers.rs  keyword.rs  lib.rs  localization.rs  meta.rs  news.rs  text_utils.rs
mimiron_bot/: Cargo.toml  PrivacyPolicy.md  README.md  TermsOfService.md
mimiron_bot/src/: bg_cmds.rs  card_cmds.rs  deck_cmds.rs  helpers.rs  main.rs
mimiron_cli/: Cargo.toml
mimiron_cli/src/: bg.rs  card.rs  deck.rs  keyword.rs  main.rs  meta.rs
mimiron_lib/: Cargo.toml
src/: authorization.rs  bg.rs  card.rs  card_details.rs  card_image.rs  deck.rs  deck_image.rs  helpers.rs  lib.rs  main.rs  prettify.rs
