[workspace]
resolver = "2"
members = ["mimiron", "mimiron_cli", "mimiron_bot"]
default-members = ["mimiron", "mimiron_cli"]

[workspace.dependencies]
# global deps
anyhow = "1"
itertools = "0.13.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
] }

# lib deps
colored = "2"
serde = { version = "1", features = ["derive"] }
ureq = "3.0.0-rc2"
base64 = "0.22"
counter = "0.6"
nom = "7.1.3"
textwrap = { version = "0.16", default-features = false, features = [
    "terminal_size",
] }
imageproc = { version = "0.25", default-features = false, features = ["rayon"] }
ab_glyph = "0.2"
rayon = "1"
eitherable = "0.1.0"
unicode-width = "0.2"
cached = "0.54"
either = { version = "1.13", features = ["serde"] }
nucleo-matcher = "0.3.1"
parking_lot = "0.12"
compact_str = {version = "0.8", features = ["serde"]}

# bot deps
poise = { git = "https://github.com/serenity-rs/poise.git", rev = "22b5b01"}
shuttle-serenity = "0.49"
shuttle-runtime = "0.49"
tracing = "0.1.40"
urlencoding = "2.1.3"
rand = "0.8.5"

# cli deps
clap = { version = "4", features = ["derive", "env"] }
directories = "5.0"
chrono = "0.4"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust-2024-compatibility = { level = "warn", priority = -1 }
refining_impl_trait_internal = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
needless_pass_by_value = "allow"

# no real reason unless officially released
missing_errors_doc = "allow"
missing_panics_doc = "allow"
