[package]
name = "mimiron"
version = "1.0.1"
edition = "2021"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A library to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
image.workspace = true
once_cell.workspace = true

colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
dotenvy = "0.15"
counter = "0.6"
nom = "7.1.3"
textwrap = { version = "0.16", default-features = false, features = [
    "terminal_size",
] }
imageproc = "0.25"
ab_glyph = "0.2"
rayon = "1"
eitherable = "0.1.0"
unicode-width = "0.1"
cached = "0.53"
either = { version = "1.12", features = ["serde"] }
convert_case = "0.6.0"
integer-encoding = "4.0.0"
nucleo-matcher = "0.3.1"
