[package]
name = "mimiron"
version = "1.0.3"
edition = "2021"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A library to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
image.workspace = true

colored.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
base64.workspace = true
dotenvy.workspace = true
counter.workspace = true
nom.workspace = true
textwrap.workspace = true
imageproc.workspace = true
ab_glyph.workspace = true
rayon.workspace = true
eitherable.workspace = true
unicode-width.workspace = true
cached.workspace = true
either.workspace = true
integer-encoding.workspace = true
nucleo-matcher.workspace = true

