[package]
name = "mimiron"
version = "1.3.0"
edition = "2024"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A library to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
image.workspace = true

colored.workspace = true
serde.workspace = true
ureq.workspace = true
base64.workspace = true
counter.workspace = true
nom.workspace = true
textwrap.workspace = true
imageproc.workspace = true
ab_glyph.workspace = true
rayon.workspace = true
eitherable.workspace = true
unicode-width.workspace = true
cached.workspace = true
either.workspace = true
nucleo-matcher.workspace = true
parking_lot.workspace = true
urlencoding.workspace = true
compact_str.workspace = true
tracing.workspace = true
enumset.workspace = true
