[package]
name = "mimiron_bot"
version = "0.3.4"
edition = "2021"
publish = false
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A Discord bot to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow = "1"
poise = "0.6.1"
shuttle-serenity = "0.38"
shuttle-runtime = "0.38"
shuttle-secrets = "0.38"
tracing = "0.1.40"
tokio = "1"
itertools = "0.12.0"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg_rayon",
] }
urlencoding = "2.1.3"
once_cell = "1.19"
rand = "0.8.5"
