[package]
name = "mimiron_bot"
version = "1.0.1"
edition = "2021"
publish = false
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A Discord bot to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow.workspace = true
itertools.workspace = true
image.workspace = true
once_cell.workspace = true

poise = "0.6.1"
shuttle-serenity = "0.47"
shuttle-runtime = "0.47"
tracing = "0.1.40"
urlencoding = "2.1.3"
rand = "0.8.5"
