[package]
name = "mimiron_bot"
version = "1.2.0"
edition = "2024"
publish = false
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A Discord bot to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow.workspace = true
itertools.workspace = true
image.workspace = true

poise.workspace = true
shuttle-serenity.workspace = true
shuttle-runtime.workspace = true
tracing.workspace = true
urlencoding.workspace = true
rand.workspace = true
