[package]
name = "mimiron_cli"
version = "1.0.0"
edition = "2021"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A CLI application to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow.workspace = true

clap = { version = "4", features = ["derive"] }
directories = "5.0"
chrono = "0.4"

[[bin]]
name = "mimiron"
path = "src/main.rs"
