[package]
name = "mimiron_cli"
version = "1.0.3"
edition = "2021"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A CLI application to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
chrono.workspace = true
dotenvy.workspace = true


[[bin]]
name = "mimiron"
path = "src/main.rs"
