[package]
name = "mimiron_cli"
version = "1.0.5"
edition = "2024"
authors = ["Abdul Rahman Sibahi <a.sibahi@gmail.com"]
description = "A CLI application to query Blizzard Hearthstone API"
license = "MIT"

[lints]
workspace = true

[dependencies]
mimiron = { path = "../mimiron" }
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true

[[bin]]
name = "mimiron"
path = "src/main.rs"
